WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
78384
MathML internals - use createXXX() function naming, ASSERT()s
https://bugs.webkit.org/show_bug.cgi?id=78384
Summary
MathML internals - use createXXX() function naming, ASSERT()s
Dave Barton
Reported
2012-02-10 13:55:07 PST
MathML internals - use createXXX() function naming, ASSERT()s
Attachments
Patch
(9.08 KB, patch)
2012-02-10 13:58 PST
,
Dave Barton
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dave Barton
Comment 1
2012-02-10 13:58:23 PST
Created
attachment 126576
[details]
Patch
Eric Seidel (no email)
Comment 2
2012-02-10 19:19:08 PST
Comment on
attachment 126576
[details]
Patch LGTM. Thanks.
WebKit Review Bot
Comment 3
2012-02-10 20:28:41 PST
Comment on
attachment 126576
[details]
Patch Clearing flags on attachment: 126576 Committed
r107473
: <
http://trac.webkit.org/changeset/107473
>
WebKit Review Bot
Comment 4
2012-02-10 20:28:46 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug