MathML internals - use createXXX() function naming, ASSERT()s https://bugs.webkit.org/show_bug.cgi?id=78384

Patch by David Barton <dbarton@mathscribe.com> on 2012-02-10
Reviewed by Eric Seidel.

Standard RefPtr function naming uses "createXXX" instead of "makeXXX".
I also added a couple of ASSERT()s.

No new tests.

* rendering/mathml/RenderMathMLBlock.cpp:
(WebCore::RenderMathMLBlock::createBlockStyle):
* rendering/mathml/RenderMathMLBlock.h:
(RenderMathMLBlock):
* rendering/mathml/RenderMathMLFenced.cpp:
(WebCore::RenderMathMLFenced::createOperatorStyle):
(WebCore::RenderMathMLFenced::makeFences):
(WebCore::RenderMathMLFenced::addChild):
* rendering/mathml/RenderMathMLFenced.h:
(RenderMathMLFenced):
* rendering/mathml/RenderMathMLFraction.cpp:
(WebCore::RenderMathMLFraction::addChild):
* rendering/mathml/RenderMathMLRoot.cpp:
(WebCore::RenderMathMLRoot::addChild):
* rendering/mathml/RenderMathMLSubSup.cpp:
(WebCore::RenderMathMLSubSup::RenderMathMLSubSup):
* rendering/mathml/RenderMathMLUnderOver.cpp:
(WebCore::RenderMathMLUnderOver::RenderMathMLUnderOver):
(WebCore::RenderMathMLUnderOver::addChild):

Canonical link: https://commits.webkit.org/95335@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@107473 268f45cc-cd09-0410-ab3c-d52691b4dbfc